# info-4940-llms-s26

./: .gitignore  README.md  pyproject.toml
notebooks/: 4940-lec-01.ipynb
