[project]
name = "info-4940-llms-s26"
version = "0.1.0"
description = "Course materials for INFO 4940/5940-11: How LLMs Work" 
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.5.0",
    "jupyterlab>=4.5.3",
    "transformers>=5.0.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "ipywidgets>=8.1.8",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
